--- a/css/hi.css
+++ b/css/hi.css
@@ -28,7 +28,7 @@ nav {
 }
 
 .menu li {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Spoqa Han Sans Neo', 'sans-serif';
     font-size: 14px;
     margin-right: 2rem;
     margin-top: 30px;
@@ -36,13 +36,13 @@ nav {
 
 .login {
     margin-left: 400px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Spoqa Han Sans Neo', 'sans-serif';
     display: flex;
 }
 .lo {
     text-align: center;
     background-color: white;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Spoqa Han Sans Neo', 'sans-serif';
     font-size: 14px;
     border: none;
     margin-top: 30px;
@@ -57,13 +57,12 @@ nav {
     text-align: center;
     margin: 8px 32px;
     margin-top: 30px;
-
     background-color: #2563EB;
     width: 94.25px;
     height: 37.6px;
     color: white;
     border: none;
-    font-family:'Roboto', sans-serif;
+    font-family: 'Spoqa Han Sans Neo', 'sans-serif';
     padding: 8 32px;
     
     border-radius: 5px;
