--- a/css/hi.css
+++ b/css/hi.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@700&family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
 * {
     padding: 0;
@@ -7,10 +7,10 @@
 
 .logo {
     width: 42.5px;
-    padding: 0 ;
-    margin: 20px;
+    height: 42.5px;
     margin-left: 150px;
     margin-right: 30px;
+    margin-top: 15px;
 
 }
 
@@ -18,7 +18,12 @@ nav {
     width: 100%;
     display: flex;
     position:fixed;
-    border-bottom: 2PX solid lightgray;
+}
+
+.separator {
+    height: 1px;
+    background-color: #ccc;
+    box-shadow: 0 70px 1px 0.5px rgb(0 0 0/0.1);
 }
 
 .menu {
@@ -28,22 +33,22 @@ nav {
 }
 
 .menu li {
-    font-family: 'Spoqa Han Sans Neo', 'sans-serif';
-    font-size: 14px;
-    margin-right: 2rem;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    margin-right: 30px;
     margin-top: 30px;
 }
 
 .login {
     margin-left: 400px;
-    font-family: 'Spoqa Han Sans Neo', 'sans-serif';
+    font-family: 'Roboto', sans-serif;
     display: flex;
 }
 .lo {
     text-align: center;
     background-color: white;
-    font-family: 'Spoqa Han Sans Neo', 'sans-serif';
-    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
     border: none;
     margin-top: 30px;
     color: #6B7280;
@@ -56,18 +61,23 @@ nav {
 .jo {
     text-align: center;
     margin: 8px 32px;
-    margin-top: 30px;
+    margin-top: 20px;
     background-color: #2563EB;
+    font-size: 15px;
     width: 94.25px;
     height: 37.6px;
     color: white;
     border: none;
-    font-family: 'Spoqa Han Sans Neo', 'sans-serif';
-    padding: 8 32px;
-    
+    font-family: 'Roboto', sans-serif;
     border-radius: 5px;
     cursor: pointer;
+    margin-bottom: 20px;
 }
+
+.go:hober {
+    background-color: rgb(119, 158, 255);
+}
+
 
 .ttt {
     text-align: center;
@@ -75,16 +85,31 @@ nav {
 
 #g1 {
     color: #1f2937;
-    font-size: 60px;
+    font-size: 65px;
     font-family: 'Spoqa Han Sans Neo', 'sans-serif';
     padding-top: 150px;
     display: block;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);  
 }
 
 #g2 {
     color: #1f2937;
     display: block;
-    font-size: 60px;
+    font-size: 65px;
     margin: -10px;
     font-family: 'Spoqa Han Sans Neo', 'sans-serif';
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+.ggg {
+    color:#1f2937;
+    font-family: 'Spoqa Han Sans Neo', 'sans-serif';
+    text-align: center;
+    font-size: 24px;
+    margin-top: 25px;
+}
+
+.go:hober {
+    background-color: rgb(149, 179, 255);
+}
+
