FIX::텍스트 수정,,

--- a/css/hi.css
+++ b/css/hi.css
@@ -75,7 +75,7 @@ nav {
 }
 
 .jo:hover {
-    background-color: rgb(119, 158, 255);
+    background-color: rgb(68, 119, 249);
 }
 
 
@@ -112,8 +112,8 @@ nav {
 .goo {
     text-align: center;
     background-color: white;
-    width: 188.36px;
-    height: 51.2px;
+    width: 140px;
+    height: 55x;
     margin-top: 30px;
     margin-left: 44%;
     cursor: pointer;
