--- a/css/hi.css
+++ b/css/hi.css
@@ -111,14 +111,15 @@ nav {
 
 .goo {
     text-align: center;
+    font-family: 'Spoqa Han Sans Neo', 'sans-serif';
     background-color: white;
     width: 140px;
-    height: 55x;
-    margin-top: 30px;
-    margin-left: 44%;
+    height: 55px;
+    margin-top: 28.5px;
+    margin-left: 45%;
     cursor: pointer;
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 18px;
 }
 .goo:hover {
     background-color: rgb(0, 0, 0);
