--- a/css/hi.css
+++ b/css/hi.css
@@ -17,7 +17,10 @@
 nav {
     width: 100%;
     display: flex;
-    position:fixed;
+}
+
+header {
+    position: fixed;
 }
 
 .separator {
@@ -35,7 +38,7 @@ nav {
 .menu li {
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
-    margin-right: 30px;
+    margin-right: 35px;
     margin-top: 27px;
 }
 
@@ -111,6 +114,7 @@ nav {
 
 .goo {
     text-align: center;
+    color: black;
     font-family: 'Spoqa Han Sans Neo', 'sans-serif';
     background-color: white;
     width: 140px;
@@ -126,3 +130,13 @@ nav {
     color: white;
 }
 
+.ss {
+    margin-top: 96px;
+    margin-right: 0px;
+    padding-right: 0px;
+    width: 100%;
+    height: 286px;
+    background-color: #374151;
+    transform: skewY(var(--section-skew-Y));
+    --section-skew-Y: -5deg;
+}
